@startuml

interface BombObserver {
  + onBombExplode(): void
}

abstract class AbstractFlyingObject {
  # locationX: int
  # locationY: int
  # speedX: int
  # speedY: int
  # image: BufferedImage
  # width: int
  # height: int
  # isValid: boolean

  + forward(): void
  + crash(AbstractFlyingObject): boolean
  + getLocationX(): int
  + getLocationY(): int
  + setLocation(double, double): void
  + getImage(): BufferedImage
  + getWidth(): int
  + getHeight(): int
  + notValid(): boolean
  + vanish(): void
}

abstract class AbstractAircraft {
  # maxHp: int
  # hp: int

  + decreaseHp(int): void
  + increaseHp(int): void
  + getHp(): int
  + getMaxHp(): int
  + {abstract} shoot(): List<BaseBullet>
}

abstract class BaseBullet {
  - power: int

  + forward(): void
  + getPower(): int
}

abstract class AbstractProp {
  + {abstract} active(HeroAircraft): void
  + active(HeroAircraft, List<AbstractAircraft>, List<BaseBullet>): void
}

' 飞机类继承关系
AbstractFlyingObject <|-- AbstractAircraft

class HeroAircraft {
  - {static} volatile instance: HeroAircraft
  - maxHp: int
  - shootNum: int
  - power: int
  - direction: int
  - shootStrategy: ShootStrategy
  - score: int
  - scheduler: ScheduledExecutorService
  - currentTask: ScheduledFuture<?>

  - HeroAircraft(int, int, int, int, int)
  + {static} getInstance(int, int, int, int, int): HeroAircraft
  + {static} getInstance(): HeroAircraft
  + forward(): void
  + shoot(): List<BaseBullet>
  + setTemporaryStrategy(ShootStrategy, long): void
  + cleanup(): void
  + reset(): void
  + getScore(): int
  + setScore(int): void
  + getCurrentStrategyName(): String
}

class MobEnemy {
  + forward(): void
  + shoot(): List<BaseBullet>
  + onBombExplode(): void
}

class EliteEnemy {
  - {static} SHOOT_NUM: int
  - {static} POWER: int
  - {static} DIRECTION: int

  + forward(): void
  + shoot(): List<BaseBullet>
  + onBombExplode(): void
}

class ElitePlus {
  - power: int
  - direction: int
  - shootNum: int

  + shoot(): List<BaseBullet>
  + onBombExplode(): void
}

class BossEnemy {
  - shootNum: int
  - power: int
  - direction: int

  + shoot(): List<BaseBullet>
  + onBombExplode(): void
}

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlus
AbstractAircraft <|-- BossEnemy

' 子弹类继承关系
AbstractFlyingObject <|-- BaseBullet

class HeroBullet {
  + HeroBullet(int, int, int, int, int)
}

class EnemyBullet {
  + EnemyBullet(int, int, int, int, int)
  + onBombExplode(): void
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

' 道具类继承关系
AbstractFlyingObject <|-- AbstractProp

class BloodProp {
  - addHp: int

  + active(HeroAircraft): void
}

class BombProp {
  - bombSubject: BombSubject

  + attachObserver(BombObserver): void
  + detachObserver(BombObserver): void
  + active(HeroAircraft): void
}

class FireProp {
  + active(HeroAircraft): void
}

class SuperFireProp {
  - {static} SUPER_FIRE_DURATION: int

  + active(HeroAircraft): void
  + getImage(): BufferedImage
}

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- FireProp
AbstractProp <|-- SuperFireProp

' 接口实现关系
BombObserver <|.. MobEnemy
BombObserver <|.. EliteEnemy
BombObserver <|.. ElitePlus
BombObserver <|.. BossEnemy
BombObserver <|.. EnemyBullet

@enduml